--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,41 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
+  {{registrationForm.value | json}}
   <form [formGroup]="registrationForm">
     <div class="form-group mb-3">
-      <label for="">Username</label>
+      <label >Username</label>
       <input formControlName='userName' type="text" class="form-control">
     </div>
 
     <div class="form-group mb-3">
-      <label for="">Password</label>
+      <label >Password</label>
       <input formControlName='password' type="password" class="form-control">
     </div>
 
     <div class="form-group mb-3">
-      <label for="">Confirm Password</label>
+      <label >Confirm Password</label>
       <input formControlName='confirmPassword' type="password" class="form-control">
     </div>
 
-    <button class="btn btn-primary" type="button">Register</button>
+   <div formGroupName="address">
+    <div class="form-group mb-3">
+      <label >City</label>
+      <input formControlName='city' type="text" class="form-control">
+    </div>
+
+    <div class="form-group mb-3">
+      <label >State</label>
+      <input formControlName='state' type="text" class="form-control">
+    </div>
+
+    <div class="form-group mb-3">
+      <label >Postal Code</label>
+      <input formControlName='postalCode' type="text" class="form-control">
+    </div>
+   </div> 
+    
+    <button class="btn btn-primary " type="button">Register</button>
+    <button (click) = "loadApiData()" class="btn btn-secondary m-2" type="button">Load Api data</button>
+
   </form>
 </div>
