--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,46 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
-  {{registrationForm.value | json}}
   <form [formGroup]="registrationForm">
+    {{registrationForm.value | json}} <br>
+    {{userName?.errors | json}}
     <div class="form-group mb-3">
       <label >Username</label>
-      <input formControlName='userName' type="text" class="form-control">
+      <input [class.is-invalid]="userName?.invalid &&
+                                  userName?.touched" 
+                                  formControlName='userName' 
+                                  type="text" 
+                                  class="form-control" 
+      />
+      <div class="text-danger" *ngIf="userName?.invalid && userName?.touched">
+        <small *ngIf="userName?.errors?.required">Username is required</small>
+        <small  *ngIf="userName?.errors?.minlength">Username must be at least 3 characters</small>
+        <small  *ngIf="userName?.errors?.forbiddenName">{{ userName?.errors?.forbiddenName.value}} Username not allowed</small>
+      </div>
+    </div>
+
+    <div class="form-gruop">
+        <label>Email</label>
+        <input [class.is-invalid]="email?.invalid && email?.touched" type="text" formControlName="email" class="form-control">
+        <small class="text-danger" [class.d-none]="email?.valid || email?.untouched">Email is required</small>
+      </div>
+
+    <div class="form-check mb-3 mt-2">
+      <input type="checkbox" class="form-check-input " formControlName="subscribe" id="checkbox">
+      <label class="form-check-label" for="checkbox">
+        Send me promotional offers
+      </label>
     </div>
 
     <div class="form-group mb-3">
       <label >Password</label>
       <input formControlName='password' type="password" class="form-control">
     </div>
-
+    
     <div class="form-group mb-3">
       <label >Confirm Password</label>
-      <input formControlName='confirmPassword' type="password" class="form-control">
+      <input [class.is-invalid]="registrationForm?.errors?.misMatch" formControlName='confirmPassword' type="password" class="form-control">
+      <small class="text-danger" *ngIf="registrationForm.errors?.misMatch">Passwords do not match</small>
+      
     </div>
 
    <div formGroupName="address">
